Changes in repo due to errors on frontend and small DB changes