@@ -27,59 +27,67 @@ public class SecurityConfig {
     private final JwtFilterValidator filterValidator;
 
     public SecurityConfig(JwtFilterValidator filterValidator) {
-       this.filterValidator = filterValidator;
+        this.filterValidator = filterValidator;
     }
 
     @Bean
-    SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception{
-        CsrfTokenRequestAttributeHandler  csrfTokenRequestAttributeHandler = new CsrfTokenRequestAttributeHandler();
-        http.sessionManagement( sessionConfig -> sessionConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+    SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
+        CsrfTokenRequestAttributeHandler csrfTokenRequestAttributeHandler = new CsrfTokenRequestAttributeHandler();
+
+        http
+                .sessionManagement(sessionConfig -> sessionConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .cors(corsConfig -> corsConfig.configurationSource(new CorsConfigurationSource() {
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(List.of("http://127.0.0.1:5500","http://localhost:5500"));
+                        config.setAllowedOrigins(List.of(
+                                "https://lupus24.byst.re",
+                                "http://localhost:5500", // w razie debugowania lokalnie
+                                "http://127.0.0.1:5500"
+                        ));
                         config.setAllowCredentials(true);
-                        config.setAllowedMethods(Collections.singletonList("*"));
-                        config.setAllowedHeaders(Arrays.asList("Authorization","Content-Type","Accept"));
+                        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
                         config.setExposedHeaders(List.of("Authorization"));
                         config.setMaxAge(7200L);
                         return config;
                     }
                 }))
-                .csrf( csrf -> csrf.disable())
-                    .authorizeHttpRequests(auth -> auth
-                            .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                            .requestMatchers("/api/auth/login").permitAll()
-                            .requestMatchers("/api/ping").permitAll()
-                            .requestMatchers("/admin-dashboard").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/listall").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/addPracownik").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/deleteByID").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/updatePracownik").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/findCzasPracyByDate").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/deleteByNameAndSurname").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/sumGodzinyPracy").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/insertweeklyPaychecks").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/insertWeeklyPaychek").hasAnyAuthority("ADMIN", "ADAS")
-                            .requestMatchers("/getWeeklyPaycheks").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/getWeeklyPaychek").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/getMonthlyPaycheks").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/pierwszyStartDzisiaj").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/sumaPrzerwDzisiaj").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/api/pracownik/czasPracyToday").hasAnyAuthority("ROLE_ADMIN", "ROLE_ADAS")
-                            .requestMatchers("/nowiDzis").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/getWeeklyPaycheksForEmployee").hasAnyAuthority("ADMIN","ADAS")
-                            .requestMatchers("/stopPracy").hasAnyAuthority("ADMIN", "ADAS")
-                            .requestMatchers("/pracownik").hasAuthority("FIZYCZNY")
-                            .anyRequest().authenticated()
-                    )
+                .csrf(csrf -> csrf.disable())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers("/api/auth/login").permitAll()
+                        .requestMatchers("/api/ping").permitAll()
+                        .requestMatchers("/admin-dashboard").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/listall").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/addPracownik").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/deleteByID").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/updatePracownik").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/findCzasPracyByDate").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/deleteByNameAndSurname").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/sumGodzinyPracy").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/insertweeklyPaychecks").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/insertWeeklyPaychek").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/getWeeklyPaycheks").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/getWeeklyPaychek").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/getMonthlyPaycheks").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/pierwszyStartDzisiaj").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/sumaPrzerwDzisiaj").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/api/pracownik/czasPracyToday").hasAnyAuthority("ROLE_ADMIN", "ROLE_ADAS")
+                        .requestMatchers("/nowiDzis").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/getWeeklyPaycheksForEmployee").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/stopPracy").hasAnyAuthority("ADMIN", "ADAS")
+                        .requestMatchers("/pracownik").hasAuthority("FIZYCZNY")
+                        .anyRequest().authenticated()
+                )
                 .addFilterBefore(filterValidator, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration)
+            throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
@@ -87,7 +95,4 @@ public class SecurityConfig {
     public PasswordEncoder passwordEncoder() {
         return NoOpPasswordEncoder.getInstance();
     }
-
-
-
 }
